--- a/medical-manager-server/package.json
+++ b/medical-manager-server/package.json
@@ -12,7 +12,9 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "pg": "^8.6.0",
-    "typeorm": "^0.2.32"
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.2.32",
+    "uuidv4": "^6.2.8"
   },
   "devDependencies": {
     "@types/cors": "^2.8.10",
