--- a/medical-manager-server/package.json
+++ b/medical-manager-server/package.json
@@ -14,7 +14,8 @@
     "pg": "^8.6.0",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.32",
-    "uuidv4": "^6.2.8"
+    "uuidv4": "^6.2.8",
+    "v4": "^0.0.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.10",
