--- a/medical-manager-server/package.json
+++ b/medical-manager-server/package.json
@@ -14,6 +14,7 @@
     "express-async-errors": "^3.1.1",
     "pg": "^8.6.0",
     "reflect-metadata": "^0.1.13",
+    "tsyringe": "^4.5.0",
     "typeorm": "^0.2.32",
     "uuidv4": "^6.2.8",
     "v4": "^0.0.1"
