--- a/medical-manager-server/package.json
+++ b/medical-manager-server/package.json
@@ -9,6 +9,7 @@
     "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js"
   },
   "dependencies": {
+    "celebrate": "^14.0.0",
     "cep-promise": "^4.1.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
@@ -23,6 +24,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.12",
+    "@types/hapi__joi": "^17.1.6",
     "@typescript-eslint/eslint-plugin": "^4.25.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^14.2.1",
